--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     compile 'com.google.code.gson:gson:2.3'
     compile 'com.octo.android.robospice:robospice-retrofit:1.4.14'
     compile 'com.octo.android.robospice:robospice:1.4.14'
+    compile 'com.android.support:support-v4:21.0.0'
 }
