--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/attendance_logo"
+        android:icon="@drawable/amit"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
@@ -40,9 +40,12 @@
 
         <activity
             android:name="com.vaiotech.attendaceapp.ScanActivity"
-            android:label="@string/title_activity_scan" >
+            android:label="Scan" >
         </activity>
-
+        <activity
+            android:name="com.vaiotech.attendaceapp.LoginActivity"
+            android:label="Login" >
+        </activity>
     </application>
 
 </manifest>
