--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     compile 'com.octo.android.robospice:robospice-retrofit:1.4.14'
     compile 'com.octo.android.robospice:robospice:1.4.14'
     compile 'org.roboguice:roboguice:3.+'
+    compile files('libs/android-smart-image-view-1.0.0.jar')
 }
