--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,12 +28,11 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile files('libs/core.jar')
     provided 'org.roboguice:roboblender:3.+'
+    compile files('libs/android-smart-image-view-1.0.0.jar')
     compile 'me.dm7.barcodescanner:zbar:1.5'
     compile 'com.google.code.gson:gson:2.3'
     compile 'com.octo.android.robospice:robospice-retrofit:1.4.14'
     compile 'com.octo.android.robospice:robospice:1.4.14'
     compile 'org.roboguice:roboguice:3.+'
-    compile files('libs/android-smart-image-view-1.0.0.jar')
-    compile 'net.glxn:qrgen:1.4'
-
+    compile 'com.android.support:support-v13:21.0.0'
 }
