--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
 
+    <uses-feature android:name="android.hardware.nfc" android:required="true"/>
+    <uses-permission android:name="android.permission.NFC"/>
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/attendance_logo"
@@ -42,6 +45,7 @@
             android:label="Login" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -52,7 +56,6 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main" >
-
         </activity>
         <activity
             android:name=".ScanQRCodeActivity"
@@ -65,6 +68,28 @@
         <activity
             android:name=".ScanVoiceActivity"
             android:label="@string/title_activity_scan_voice" >
+        </activity>
+        <activity
+            android:name=".ScanCardSelectionActivity"
+            android:label="@string/title_activity_scan_card_selection" >
+        </activity>
+        <activity
+            android:name=".ScanCardBatchActivity"
+            android:label="@string/title_activity_scan_card_batch" >
+            <intent-filter>
+                <action android:name="android.nfc.action.NDEF_DISCOVERED"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <data android:mimeType="text/plain"/>
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".ScanCardSingleActivity"
+            android:label="@string/title_activity_scan_card_single" >
+            <intent-filter>
+                <action android:name="android.nfc.action.NDEF_DISCOVERED"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <data android:mimeType="text/plain"/>
+            </intent-filter>
         </activity>
     </application>
 
