--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
 
     <uses-feature android:name="android.hardware.nfc" android:required="true"/>
     <uses-permission android:name="android.permission.NFC"/>
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:clearTaskOnLaunch="true"
@@ -80,10 +81,12 @@
             <intent-filter>
                 <action android:name="android.nfc.action.NDEF_DISCOVERED"/>
                 <category android:name="android.intent.category.DEFAULT"/>
+                <data android:scheme="vnd.android.nfc" />
             </intent-filter>
             <intent-filter>
                 <action android:name="android.nfc.action.TAG_DISCOVERED"/>
                 <category android:name="android.intent.category.DEFAULT"/>
+                <data android:scheme="vnd.android.nfc" />
             </intent-filter>
         </activity>
         <activity
