--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,19 +19,22 @@
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
 
-    <uses-feature android:name="android.hardware.nfc" android:required="true"/>
-    <uses-permission android:name="android.permission.NFC"/>
+    <uses-feature
+        android:name="android.hardware.nfc"
+        android:required="true" />
+
+    <uses-permission android:name="android.permission.NFC" />
     <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
-        android:clearTaskOnLaunch="true"
-        android:launchMode="singleTop"
         android:allowBackup="true"
+        android:clearTaskOnLaunch="true"
         android:icon="@drawable/attendance_logo"
         android:label="@string/app_name"
+        android:launchMode="singleTop"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".HomeActivity"
+            android:name="com.vaiotech.attendaceapp.HomeActivity"
             android:label="@string/app_name" >
         </activity>
 
@@ -40,65 +43,76 @@
             android:exported="false" />
 
         <activity
-            android:name=".ScanActivity"
+            android:name="com.vaiotech.attendaceapp.ScanActivity"
             android:label="Scan" >
         </activity>
         <activity
-            android:name=".LoginActivity"
+            android:name="com.vaiotech.attendaceapp.LoginActivity"
             android:label="Login" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+
         </activity>
         <activity
-            android:name=".UserActivity"
+            android:name="com.vaiotech.attendaceapp.UserActivity"
             android:label="@string/title_activity_user" >
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name="com.vaiotech.attendaceapp.MainActivity"
             android:label="@string/title_activity_main" >
         </activity>
         <activity
-            android:name=".ScanQRCodeActivity"
+            android:name="com.vaiotech.attendaceapp.ScanQRCodeActivity"
             android:label="@string/title_activity_scan_qrcode" >
         </activity>
         <activity
-            android:name=".ScanCardActivity"
+            android:name="com.vaiotech.attendaceapp.ScanCardActivity"
             android:label="@string/title_activity_scan_card" >
         </activity>
         <activity
-            android:name=".ScanVoiceActivity"
+            android:name="com.vaiotech.attendaceapp.ScanVoiceActivity"
             android:label="@string/title_activity_scan_voice" >
         </activity>
         <activity
-            android:name=".ScanCardSelectionActivity"
+            android:name="com.vaiotech.attendaceapp.ScanCardSelectionActivity"
             android:label="@string/title_activity_scan_card_selection" >
         </activity>
         <activity
-            android:name=".ScanCardBatchActivity"
+            android:name="com.vaiotech.attendaceapp.ScanCardBatchActivity"
             android:label="@string/title_activity_scan_card_batch" >
             <intent-filter>
-                <action android:name="android.nfc.action.NDEF_DISCOVERED"/>
-                <category android:name="android.intent.category.DEFAULT"/>
+                <action android:name="android.nfc.action.NDEF_DISCOVERED" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+
                 <data android:scheme="vnd.android.nfc" />
             </intent-filter>
             <intent-filter>
-                <action android:name="android.nfc.action.TAG_DISCOVERED"/>
-                <category android:name="android.intent.category.DEFAULT"/>
+                <action android:name="android.nfc.action.TAG_DISCOVERED" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+
                 <data android:scheme="vnd.android.nfc" />
             </intent-filter>
         </activity>
         <activity
-            android:name=".ScanCardSingleActivity"
+            android:name="com.vaiotech.attendaceapp.ScanCardSingleActivity"
             android:label="@string/title_activity_scan_card_single" >
             <intent-filter>
-                <action android:name="android.nfc.action.NDEF_DISCOVERED"/>
-                <category android:name="android.intent.category.DEFAULT"/>
+                <action android:name="android.nfc.action.NDEF_DISCOVERED" />
+
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
             <intent-filter>
-                <action android:name="android.nfc.action.TAG_DISCOVERED"/>
-                <category android:name="android.intent.category.DEFAULT"/>
+                <action android:name="android.nfc.action.TAG_DISCOVERED" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="com.vaiotech.attendaceapp.FunctionalMainActivity"
+            android:label="iPresence" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
