--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
     <application
         android:allowBackup="true"
         android:clearTaskOnLaunch="true"
-        android:icon="@drawable/attendance_logo"
+        android:icon="@drawable/najmul"
         android:label="@string/app_name"
         android:launchMode="singleTop"
         android:theme="@style/AppTheme" >
@@ -49,7 +49,6 @@
         <activity
             android:name="com.vaiotech.attendaceapp.LoginActivity"
             android:label="Login" >
-
         </activity>
         <activity
             android:name="com.vaiotech.attendaceapp.UserActivity"
@@ -112,8 +111,25 @@
             android:label="iPresence" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.vaiotech.attendaceapp.MyProfileActivity"
+            android:label="@string/title_activity_my_profile" >
+        </activity>
+        <activity
+            android:name="com.vaiotech.attendaceapp.AboutIPresenceActivity"
+            android:label="@string/title_activity_about_ipresence" >
+        </activity>
+        <activity
+            android:name="com.vaiotech.attendaceapp.ViewReportActivity"
+            android:label="@string/title_activity_view_report" >
+        </activity>
+        <activity
+            android:name="com.vaiotech.attendaceapp.ContactUsActivity"
+            android:label="@string/title_activity_contact_us" >
         </activity>
     </application>
 
