--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -131,6 +131,10 @@
             android:name="com.vaiotech.attendaceapp.ContactUsActivity"
             android:label="@string/title_activity_contact_us" >
         </activity>
+        <activity
+            android:name="com.vaiotech.attendaceapp.ScanQRCodeSingleActivity"
+            android:label="@string/title_activity_scan_qrcode_single" >
+        </activity>
     </application>
 
 </manifest>
