--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.vaiotech.attendaceapp" >
+    package="com.vaiotech.attendaceapp"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.CAMERA" />
 
@@ -31,6 +32,7 @@
     <application
         android:allowBackup="true"
         android:clearTaskOnLaunch="true"
+        tools:replace="icon, label"
         android:icon="@drawable/najmul"
         android:label="@string/app_name"
         android:launchMode="singleTop"
