--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.vaiotech.attendaceapp"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.vaiotech.attendaceapp" >
 
     <uses-permission android:name="android.permission.CAMERA" />
 
@@ -37,7 +37,7 @@
         android:theme="@style/AppTheme"
         tools:replace="icon, label" >
         <activity
-            android:name=".HomeActivity"
+            android:name="com.vaiotech.attendaceapp.HomeActivity"
             android:label="@string/app_name" >
         </activity>
 
@@ -46,39 +46,39 @@
             android:exported="false" />
 
         <activity
-            android:name=".ScanActivity"
+            android:name="com.vaiotech.attendaceapp.ScanActivity"
             android:label="Scan" >
         </activity>
         <activity
-            android:name=".LoginActivity"
+            android:name="com.vaiotech.attendaceapp.LoginActivity"
             android:label="Login" >
         </activity>
         <activity
-            android:name=".UserActivity"
+            android:name="com.vaiotech.attendaceapp.UserActivity"
             android:label="@string/title_activity_user" >
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name="com.vaiotech.attendaceapp.MainActivity"
             android:label="@string/title_activity_main" >
         </activity>
         <activity
-            android:name=".ScanQRCodeActivity"
+            android:name="com.vaiotech.attendaceapp.ScanQRCodeActivity"
             android:label="@string/title_activity_scan_qrcode" >
         </activity>
         <activity
-            android:name=".ScanCardActivity"
+            android:name="com.vaiotech.attendaceapp.ScanCardActivity"
             android:label="@string/title_activity_scan_card" >
         </activity>
         <activity
-            android:name=".ScanVoiceActivity"
+            android:name="com.vaiotech.attendaceapp.ScanVoiceActivity"
             android:label="@string/title_activity_scan_voice" >
         </activity>
         <activity
-            android:name=".ScanCardSelectionActivity"
+            android:name="com.vaiotech.attendaceapp.ScanCardSelectionActivity"
             android:label="@string/title_activity_scan_card_selection" >
         </activity>
         <activity
-            android:name=".ScanCardBatchActivity"
+            android:name="com.vaiotech.attendaceapp.ScanCardBatchActivity"
             android:label="@string/title_activity_scan_card_batch" >
             <intent-filter>
                 <action android:name="android.nfc.action.NDEF_DISCOVERED" />
@@ -96,7 +96,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ScanCardSingleActivity"
+            android:name="com.vaiotech.attendaceapp.ScanCardSingleActivity"
             android:label="@string/title_activity_scan_card_single" >
             <intent-filter>
                 <action android:name="android.nfc.action.NDEF_DISCOVERED" />
@@ -110,7 +110,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".FunctionalMainActivity"
+            android:name="com.vaiotech.attendaceapp.FunctionalMainActivity"
             android:label="iPresence" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -119,28 +119,32 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MyProfileActivity"
+            android:name="com.vaiotech.attendaceapp.MyProfileActivity"
             android:label="@string/title_activity_my_profile" >
         </activity>
         <activity
-            android:name=".AboutIPresenceActivity"
+            android:name="com.vaiotech.attendaceapp.AboutIPresenceActivity"
             android:label="@string/title_activity_about_ipresence" >
         </activity>
         <activity
-            android:name=".ViewReportActivity"
+            android:name="com.vaiotech.attendaceapp.ViewReportActivity"
             android:label="@string/title_activity_view_report" >
         </activity>
         <activity
-            android:name=".ContactUsActivity"
+            android:name="com.vaiotech.attendaceapp.ContactUsActivity"
             android:label="@string/title_activity_contact_us" >
         </activity>
         <activity
-            android:name=".ScanQRCodeSingleActivity"
+            android:name="com.vaiotech.attendaceapp.ScanQRCodeSingleActivity"
             android:label="@string/title_activity_scan_qrcode_single" >
         </activity>
         <activity
-            android:name=".ManualEntryActivity"
+            android:name="com.vaiotech.attendaceapp.ManualEntryActivity"
             android:label="@string/title_activity_manual_entry" >
+        </activity>
+        <activity
+            android:name="com.vaiotech.attendaceapp.ScanQRCodeBatchActivity"
+            android:label="@string/title_activity_scan_qrcode_batch" >
         </activity>
     </application>
 
