--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
     <application
         android:allowBackup="true"
         android:clearTaskOnLaunch="true"
-        android:icon="@drawable/najmul"
+        android:icon="@drawable/manual_entry1"
         android:label="@string/app_name"
         android:launchMode="singleTop"
         android:theme="@style/AppTheme"
