--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
         android:theme="@style/AppTheme"
         tools:replace="icon, label" >
         <activity
-            android:name="com.vaiotech.attendaceapp.HomeActivity"
+            android:name=".HomeActivity"
             android:label="@string/app_name" >
         </activity>
 
@@ -46,39 +46,39 @@
             android:exported="false" />
 
         <activity
-            android:name="com.vaiotech.attendaceapp.ScanActivity"
+            android:name=".ScanActivity"
             android:label="Scan" >
         </activity>
         <activity
-            android:name="com.vaiotech.attendaceapp.LoginActivity"
+            android:name=".LoginActivity"
             android:label="Login" >
         </activity>
         <activity
-            android:name="com.vaiotech.attendaceapp.UserActivity"
+            android:name=".UserActivity"
             android:label="@string/title_activity_user" >
         </activity>
         <activity
-            android:name="com.vaiotech.attendaceapp.MainActivity"
+            android:name=".MainActivity"
             android:label="@string/title_activity_main" >
         </activity>
         <activity
-            android:name="com.vaiotech.attendaceapp.ScanQRCodeActivity"
+            android:name=".ScanQRCodeActivity"
             android:label="@string/title_activity_scan_qrcode" >
         </activity>
         <activity
-            android:name="com.vaiotech.attendaceapp.ScanCardActivity"
+            android:name=".ScanCardActivity"
             android:label="@string/title_activity_scan_card" >
         </activity>
         <activity
-            android:name="com.vaiotech.attendaceapp.ScanVoiceActivity"
+            android:name=".ScanVoiceActivity"
             android:label="@string/title_activity_scan_voice" >
         </activity>
         <activity
-            android:name="com.vaiotech.attendaceapp.ScanCardSelectionActivity"
+            android:name=".ScanCardSelectionActivity"
             android:label="@string/title_activity_scan_card_selection" >
         </activity>
         <activity
-            android:name="com.vaiotech.attendaceapp.ScanCardBatchActivity"
+            android:name=".ScanCardBatchActivity"
             android:label="@string/title_activity_scan_card_batch" >
             <intent-filter>
                 <action android:name="android.nfc.action.NDEF_DISCOVERED" />
@@ -96,7 +96,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.vaiotech.attendaceapp.ScanCardSingleActivity"
+            android:name=".ScanCardSingleActivity"
             android:label="@string/title_activity_scan_card_single" >
             <intent-filter>
                 <action android:name="android.nfc.action.NDEF_DISCOVERED" />
@@ -110,7 +110,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.vaiotech.attendaceapp.FunctionalMainActivity"
+            android:name=".FunctionalMainActivity"
             android:label="iPresence" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -118,34 +118,37 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
-            android:name="com.vaiotech.attendaceapp.MyProfileActivity"
+            android:name=".MyProfileActivity"
             android:label="@string/title_activity_my_profile" >
         </activity>
         <activity
-            android:name="com.vaiotech.attendaceapp.AboutIPresenceActivity"
+            android:name=".AboutIPresenceActivity"
             android:label="@string/title_activity_about_ipresence" >
         </activity>
         <activity
-            android:name="com.vaiotech.attendaceapp.ViewReportActivity"
+            android:name=".ViewReportActivity"
             android:label="@string/title_activity_view_report" >
         </activity>
         <activity
-            android:name="com.vaiotech.attendaceapp.ContactUsActivity"
+            android:name=".ContactUsActivity"
             android:label="@string/title_activity_contact_us" >
         </activity>
         <activity
-            android:name="com.vaiotech.attendaceapp.ScanQRCodeSingleActivity"
+            android:name=".ScanQRCodeSingleActivity"
             android:label="@string/title_activity_scan_qrcode_single" >
         </activity>
         <activity
-            android:name="com.vaiotech.attendaceapp.ManualEntryActivity"
+            android:name=".ManualEntryActivity"
             android:label="@string/title_activity_manual_entry" >
         </activity>
         <activity
-            android:name="com.vaiotech.attendaceapp.ScanQRCodeBatchActivity"
+            android:name=".ScanQRCodeBatchActivity"
             android:label="@string/title_activity_scan_qrcode_batch" >
+        </activity>
+        <activity
+            android:name=".UserMainActivity"
+            android:label="@string/title_activity_user_main" >
         </activity>
     </application>
 
